--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-*/build/
 .ipynb_checkpoints
 .vscode
 */.ipynb_checkpoints/*
 __pycache__/
+
+# Distribution / packaging
+*/build/
 *.egg-info/
 
 # generated documentation
