Update pyproject.toml and setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = twoaxistracking
+name = two_axis_tracker_shading
 version = 0.1.0
 author = Adam R. Jensen
 author_email = adam-r-j@hotmail.com
 description = Functions for simulating self-shading of two-axis trackers
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/AdamRJensen/twoaxistracking
+url = https://github.com/AdamRJensen/two_axis_tracker_shading
 project_urls =
-    Bug Tracker = https://github.com/AdamRJensen/twoaxistracking/issues
+    Bug Tracker = https://github.com/AdamRJensen/two_axis_tracker_shading/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
@@ -17,7 +17,5 @@ classifiers =
     Intended Audience :: Science/Research
 
 [options]
-package_dir =
-    = twoaxistracking
-packages = [twoaxistracking]
+packages = two_axis_tracker_shading
 python_requires = >=3.6
