--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,17 @@ requires = [
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
+
+[project]
+dependencies = [
+  'pvlib',
+  'numpy',
+  'pandas',
+  'matplotlib',
+  'shapely',
+]
+
+[project.optional-dependencies]
+tests = [
+  'pytest',
+]
