--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = two_axis_tracker_shading
+name = twoaxistracking
 version = 0.1.0
 author = Adam R. Jensen
 author_email = adam-r-j@hotmail.com
 description = Functions for simulating self-shading of two-axis trackers
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/AdamRJensen/two_axis_tracker_shading
+url = https://github.com/AdamRJensen/twoaxistracking
 project_urls =
-    Bug Tracker = https://github.com/AdamRJensen/two_axis_tracker_shading/issues
+    Bug Tracker = https://github.com/AdamRJensen/twoaxistracking/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
@@ -17,5 +17,5 @@ classifiers =
     Intended Audience :: Science/Research
 
 [options]
-packages = two_axis_tracker_shading
+packages = twoaxistracking
 python_requires = >=3.6
