--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,7 +3,7 @@ matplotlib
 numpy
 pvlib
 shapely # Should be installed with conda
-git+https://git@https://github.com/AdamRJensen/twoaxistracking/tree/sphinx@master#egg=twoaxistracking
+git+https://git@https://github.com/AdamRJensen/twoaxistracking@sphinx#egg=twoaxistracking
 # Documentation requirements
 sphinx
 myst-nb
