Update environment.yml to include pip

--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,11 +1,15 @@
 name: readthedocs
+channels:
+    - defaults
+    - conda-forge
 dependencies:
   - python=3.7
   - pandas
   - matplotlib
   - numpy
-  - pvlib
   - shapely # Should be installed with conda
   - sphinx
-  - myst-nb
-  - sphinx-book-theme
+  - pip:
+        - pvlib
+        - myst-nb
+        - sphinx-book-theme
