move dependencies from pyproject.toml to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,12 @@ classifiers =
 [options]
 packages = twoaxistracking
 python_requires = >=3.6
+install_requires =
+    pvlib
+    numpy
+    pandas
+    matplotlib
+    shapely
+
+[options.extras_require]
+test = pytest;
