--- a/setup.cfg
+++ b/setup.cfg
@@ -28,3 +28,10 @@ install_requires =
 
 [options.extras_require]
 test = pytest;pytest-cov;
+
+[tool:pytest]
+addopts = --cov=twoaxistracking --cov-fail-under=100 --cov-report=term-missing
+
+[coverage:run]
+# don't count the test files themselves towards coverage
+omit = twoaxistracking/tests/*
