--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,11 +8,13 @@ on:
 jobs:
   test:
 
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false  # don't cancel other matrix jobs when one fails
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2
