exclude MacOS+py3.10

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,9 @@ jobs:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
         os: [ubuntu-latest, macos-latest, windows-latest]
+        exclude:
+          - python-version: "3.10"  # as of 2022-02-24, no wheels for py3.10 MacOS x86_64
+            os: macos-latest
 
     runs-on: ${{ matrix.os }}
 
