--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .[test]
-    - name: Lint with flake8
+    - name: Run tests
       run: |
         pytest
