Add test & coverage CI job (#15)
* move dependencies from pyproject.toml to setup.cfg

* bump min python to 3.7

* fix oversight in lint.yml

* add pytest-cov to [test] deps

* add gh actions test and coverage workflow

* placeholder test

* lint

* fail-fast: false

* pytest and coverage configuration

* test on all three main OSs

* exclude MacOS+py3.10

* fix copy/paste oversight

* coverage tweak

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,4 +18,20 @@ classifiers =
 
 [options]
 packages = twoaxistracking
-python_requires = >=3.6
+python_requires = >=3.7
+install_requires =
+    pvlib
+    numpy
+    pandas
+    matplotlib
+    shapely
+
+[options.extras_require]
+test = pytest;pytest-cov;
+
+[tool:pytest]
+addopts = --cov=twoaxistracking --cov-fail-under=100 --cov-report=term-missing
+
+[coverage:run]
+# don't count the test files themselves towards coverage
+omit = twoaxistracking/tests/*
