rework doc requirements and build

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,14 @@ install_requires =
     shapely
 
 [options.extras_require]
-test = pytest;pytest-cov;
+test =
+    pytest
+    pytest-cov
+doc =
+    sphinx==4.4.0
+    pvlib==0.9.0
+    myst-nb==0.13.2
+    sphinx-book-theme==0.2.0
 
 [tool:pytest]
 addopts = --cov=twoaxistracking --cov-fail-under=100 --cov-report=term-missing
