--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,18 +1,17 @@
 version: 2
 
-conda:
-    environment: docs/environment.yml
 
 build:
-   image: latest
+   os: ubuntu-20.04
+   tools:
+     python: "3.7"
 
-# This part is necessary otherwise the project is not built
 python:
-   version: 3.7
+   # only use the packages specified in setup.py
+   system_packages: false
+
    install:
       - method: pip
         path: .
-        
-# By default readthedocs does not checkout git submodules
-submodules:                                                                                                                          
-    include: all
+        extra_requirements:
+          - doc
