--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ project_urls =
     Bug Tracker = https://github.com/pvlib/twoaxistracking/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: BSD License
     Operating System :: OS Independent
     Topic :: Scientific/Engineering
     Intended Audience :: Science/Research
