--- a/setup.cfg
+++ b/setup.cfg
@@ -30,9 +30,10 @@ test =
     pytest-cov
 doc =
     sphinx==4.4.0
-    pvlib==0.9.0
     myst-nb==0.13.2
     sphinx-book-theme==0.2.0
+    pvlib==0.9.0
+    pandas==1.3.5
 
 [tool:pytest]
 addopts = --cov=twoaxistracking --cov-fail-under=100 --cov-report=term-missing
