--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = twoaxistracking
 version = 0.1.0
 author = Adam R. Jensen
 author_email = adam-r-j@hotmail.com
-description = Functions for simulating self-shading of two-axis trackers
+description = twoaxistracking is a python package for simulating two-axis tracking solar collectors, particularly self-shading.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/pvlib/twoaxistracking
