--- a/setup.cfg
+++ b/setup.cfg
@@ -3,15 +3,15 @@ name = twoaxistracking
 version = 0.1.0
 author = Adam R. Jensen
 author_email = adam-r-j@hotmail.com
-description = Functions for simulating self-shading of two-axis trackers
+description = twoaxistracking is a python package for simulating two-axis tracking solar collectors, particularly self-shading.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/AdamRJensen/twoaxistracking
+url = https://github.com/pvlib/twoaxistracking
 project_urls =
-    Bug Tracker = https://github.com/AdamRJensen/twoaxistracking/issues
+    Bug Tracker = https://github.com/pvlib/twoaxistracking/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: BSD License
     Operating System :: OS Independent
     Topic :: Scientific/Engineering
     Intended Audience :: Science/Research
@@ -20,14 +20,20 @@ classifiers =
 packages = twoaxistracking
 python_requires = >=3.7
 install_requires =
-    pvlib
     numpy
-    pandas
     matplotlib
     shapely
 
 [options.extras_require]
-test = pytest;pytest-cov;
+test =
+    pytest
+    pytest-cov
+doc =
+    sphinx==4.4.0
+    myst-nb==0.13.2
+    sphinx-book-theme==0.2.0
+    pvlib==0.9.0
+    pandas==1.3.5
 
 [tool:pytest]
 addopts = --cov=twoaxistracking --cov-fail-under=100 --cov-report=term-missing
