--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,17 +1,18 @@
 version: 2
 
+conda:
+    environment: docs/environment.yml
 
 build:
-   os: ubuntu-20.04
-   tools:
-     python: "3.7"
+   image: latest
 
+# This part is necessary otherwise the project is not built
 python:
-   # only use the packages specified in setup.py
-   system_packages: false
-
+   version: 3.7
    install:
       - method: pip
         path: .
-        extra_requirements:
-          - doc
+        
+# By default readthedocs does not checkout git submodules
+submodules:                                                                                                                          
+    include: all
