--- a/setup.cfg
+++ b/setup.cfg
@@ -3,15 +3,15 @@ name = twoaxistracking
 version = 0.1.0
 author = Adam R. Jensen
 author_email = adam-r-j@hotmail.com
-description = twoaxistracking is a python package for simulating two-axis tracking solar collectors, particularly self-shading.
+description = Functions for simulating self-shading of two-axis trackers
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pvlib/twoaxistracking
+url = https://github.com/AdamRJensen/twoaxistracking
 project_urls =
-    Bug Tracker = https://github.com/pvlib/twoaxistracking/issues
+    Bug Tracker = https://github.com/AdamRJensen/twoaxistracking/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: BSD License
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Topic :: Scientific/Engineering
     Intended Audience :: Science/Research
@@ -20,21 +20,14 @@ classifiers =
 packages = twoaxistracking
 python_requires = >=3.7
 install_requires =
+    pvlib
     numpy
+    pandas
     matplotlib
     shapely
 
 [options.extras_require]
-test =
-    pytest
-    pytest-cov
-    pandas
-doc =
-    sphinx==4.4.0
-    myst-nb==0.13.2
-    sphinx-book-theme==0.2.0
-    pvlib==0.9.0
-    pandas==1.3.5
+test = pytest;pytest-cov;
 
 [tool:pytest]
 addopts = --cov=twoaxistracking --cov-fail-under=100 --cov-report=term-missing
