--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = twoaxistracking
-version = 0.1.0
-author = Adam R. Jensen
+version = 0.2.0
+author = 'Adam R. Jensen, Kevin Anderson'
 author_email = adam-r-j@hotmail.com
 description = twoaxistracking is a python package for simulating two-axis tracking solar collectors, particularly self-shading.
 long_description = file: README.md
@@ -9,6 +9,7 @@ long_description_content_type = text/markdown
 url = https://github.com/pvlib/twoaxistracking
 project_urls =
     Bug Tracker = https://github.com/pvlib/twoaxistracking/issues
+    Documentation = https://twoaxistracking.readthedocs.io
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: BSD License
