--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,9 +26,9 @@ jobs:
     - name: Install build tools
       run: |
         python -m pip install --upgrade pip
-        python -m pip install --upgrade setuptools wheel
+        python -m pip install --upgrade setuptools wheel build
     - name: Build packages
-      run: python setup.py sdist bdist_wheel
+      run: python -m build --sdist --wheel
 
     - name: Publish distribution to PyPI
       uses: pypa/gh-action-pypi-publish@master
