--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ python_requires = >=3.7
 install_requires =
     numpy
     matplotlib
-    shapely
+    shapely<2.0
     pandas
 
 [options.extras_require]
