make twoaxistracking.__version__ work

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ install_requires =
 test =
     pytest
     pytest-cov
+    importlib-metadata; python_version < "3.8"
 doc =
     sphinx==4.4.0
     myst-nb==0.16.0
