--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ install_requires =
     matplotlib
     shapely
     pandas
+    importlib-metadata; python_version < "3.8"
 
 [options.extras_require]
 test =
