--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 exclude = [
-    "twoaxistracking.tests*",
-    "twoaxistracking.data*",
+    "tests*",
+    "data*",
 ]
 
 [project]
