--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,13 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]  # set version dynamically
 
+[tool.setuptools]
+include-package-data = false  # necessary for exclude to work
+
 [tool.setuptools.packages.find]
 exclude = [
-    "tests*",
-    "data*",
+    "twoaxistracking.tests*",
+    "docs*",
 ]
 
 [project]
