--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,66 @@
 [build-system]
 requires = [
-    "setuptools>=42",
-    "wheel"
+    "setuptools>61",  # start of support for pyproject.toml/PEP 621. https://setuptools.pypa.io/en/stable/history.html#v61-0-0
+    "setuptools-scm",
 ]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools_scm]  # set version dynamically
+
+[tool.setuptools]
+include-package-data = false  # necessary for exclude to work
+
+[tool.setuptools.packages.find]
+exclude = [
+    "twoaxistracking.tests*",
+    "docs*",
+]
+
+[project]
+name = "twoaxistracking"
+authors = [
+    {name = "Adam R. Jensen"},
+    {name = "Kevin S. Anderson"},
+    {email = "adam-r-j@hotmail.com"},
+]
+description = "twoaxistracking is a python package for simulating two-axis tracking solar collectors, particularly self-shading."
+readme = "README.md"
+requires-python = ">=3.9"
+keywords = ["solar energy", "photovoltaics", "solar collector", "shading"]
+license = {file = "LICENSE"}
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: BSD License",
+    "Operating System :: OS Independent",
+    "Topic :: Scientific/Engineering",
+    "Intended Audience :: Science/Research",
+]
+dependencies = [
+    "numpy",
+    "matplotlib",
+    "shapely",
+    "pandas",
+]
+dynamic = ["version"]
+
+[project.optional-dependencies]
+test = ["pytest", "pytest-cov", "packaging"]
+doc = [
+    "sphinx==8.1.1",
+    "myst-nb==1.1.2",
+    "sphinx-book-theme==1.1.3",
+    "pvlib==0.11.1",
+    "pandas==2.2.3",
+]
+
+[project.urls]
+Documentation = "https://twoaxistracking.readthedocs.io"
+Issues = "https://github.com/pvlib/twoaxistracking/issues"
+Repository = "https://github.com/pvlib/twoaxistracking.git"
+
+[tool.pytest.ini_options]
+addopts = "--cov=twoaxistracking --cov-fail-under=100 --cov-report=term-missing"
+
+[tool.coverage.run]
+# Do not count the test files themselves toward coverage
+omit = ["twoaxistracking/tests/*"]
