Update permissions in publish.yml

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,9 @@
 name: Publish distributions to PyPI
 
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: read  # This is required for actions/checkout
+
 # if this workflow is modified to be a generic CI workflow then
 # add an if statement to the publish step so it only runs on tags.
 on:
