--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ build-backend = "setuptools.build_meta"
 include-package-data = false  # necessary for exclude to work
 
 [tool.setuptools.packages.find]
+where = ["src"]
 exclude = [
     "tests*",
     "docs*",
