--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,10 +4,10 @@ name: Publish distributions to PyPI
 # 1. Create a new environment for additional protection and security in the GitHub UI:
 #    Settings > Environments
 #    Name: release
-#    Description: Environment for publishing releases to PyPI
+#    Description (e.g.): Environment for publishing releases to PyPI
 # 2. Setup trusted publishing for the release environment:
 #    https://docs.pypi.org/trusted-publishers/
-# 3. Ensure your main development branch is named 'main'; if not, update the workflow or the branch name
+# 3. Ensure your main development branch is named 'main'; if not, update the workflow or rename the branch
 
 # This workflow is triggered on pull requests that target the main branch
 # on pushes to the main branch new tags that start with 'v' (for example, 'v1.0.0').
@@ -31,9 +31,6 @@ jobs:
     name: Build distribution
     if: github.repository == env.base-repo
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write # This is required for requesting the JWT
-      contents: read  # This is required for actions/checkout
     steps:
     - uses: actions/checkout@v4
       # Shallow clone to fetch only the latest commit, which is faster
