--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 keywords = ["solar energy", "photovoltaics", "solar collector", "shading"]
 license = "BSD-3-Clause"
+license-files = ["LICEN[CS]E*"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
@@ -58,6 +59,7 @@ doc = [
 Documentation = "https://twoaxistracking.readthedocs.io"
 Issues = "https://github.com/pvlib/twoaxistracking/issues"
 Repository = "https://github.com/pvlib/twoaxistracking.git"
+Changelog = "https://github.com/pvlib/twoaxistracking/blob/main/docs/source/whatsnew.md"
 
 [tool.pytest.ini_options]
 addopts = "--cov=twoaxistracking --cov-fail-under=100 --cov-report=term-missing"
