[CI] build'n'publish with steroids (#64)
* Update .gitignore (not venv in it, what crime was that 👀 )

https://github.com/github/gitignore/blob/main/Python.gitignore

* Update publish CI

* refine instructions

* Update publish.yml

* retrigger RTD by removing an optional instruction

* Change CI name

* Fix using env in if statements

* Hard-coding it cause GH did not thought about constants

* setuptools-scm did not work with a shallow copy

* fix installation size listing

* Switch to SPDX license format

* Add license-file field to pyproject.toml

---------

Co-authored-by: Adam R. Jensen <39184289+AdamRJensen@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ description = "twoaxistracking is a python package for simulating two-axis track
 readme = "README.md"
 requires-python = ">=3.9"
 keywords = ["solar energy", "photovoltaics", "solar collector", "shading"]
-license = {file = "LICENSE"}
+license = "BSD-3-Clause"
+license-files = ["LICEN[CS]E*"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
@@ -32,7 +33,6 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
-    "License :: OSI Approved :: BSD License",
     "Operating System :: OS Independent",
     "Topic :: Scientific/Engineering",
     "Intended Audience :: Science/Research",
@@ -59,6 +59,7 @@ doc = [
 Documentation = "https://twoaxistracking.readthedocs.io"
 Issues = "https://github.com/pvlib/twoaxistracking/issues"
 Repository = "https://github.com/pvlib/twoaxistracking.git"
+Changelog = "https://github.com/pvlib/twoaxistracking/blob/main/docs/source/whatsnew.md"
 
 [tool.pytest.ini_options]
 addopts = "--cov=twoaxistracking --cov-fail-under=100 --cov-report=term-missing"
