--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Install build tools
       run: |
         python -m pip install --upgrade pip
-        python -m pip install --upgrade setuptools wheel build twine
+        python -m pip install --upgrade setuptools build twine
 
     - name: Build packages
       # creates the necessary distribution files to /dist
